--- a/app/views/items/_item.html.haml
+++ b/app/views/items/_item.html.haml
@@ -1,53 +1,51 @@
 .item{id: "item-#{item.id}"}
-  .span8.well.well-small
-    %div.hidden-phone.hidden-tablet
-      %table{align: "center", width: "100%"}
+  %div.hidden-phone.hidden-tablet.well.well-small
+    %table{align: "center", width: "100%"}
+      %tr
+        %td{rowspan: "2"}
+          -if item.thumbnail == ""
+            = image_tag('product.png', :class => 'img-rounded', :size => "50x50")
+          -else
+            = image_tag(item.thumbnail, :class => 'img-rounded', :size => "50x50")
+        %td{align: "center"}
+          .lead= item.name
+        %td{align: "center"}
+          .lead= item.price.to_s + ' credits'
+        %td{align: "center"}
+          -if current_user.credits < item.price || (current_user.user_type < 10 && item.used_by == "family")
+            = link_to 'Buy', '#', class: "btn", disabled: true
+          -else
+            = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn", remote: true
+          %div{id: "itemCount-#{item.id}"}
+            .badge.badge-inverse= Purchase.where(item_id: item.id).count
+      %tr
+        %td{colspan: "2", align: "center"}
+          .muted= item.description
+        %td{align: "center"}
+          =link_to ' Edit', edit_item_path(item), class: "i icon-edit btn btn-small"
+          =link_to ' Delete', item, confirm: 'Are you sure?', class: "i icon-trash btn btn-small", method: :delete, remote: true
+  %div.visible-phone.visible-tablet.well.well-small{align: "center"}
+    .span2
+      %table{width: "100%"}
         %tr
-          %td{rowspan: "2"}
+          %td
             -if item.thumbnail == ""
               = image_tag('product.png', :class => 'img-rounded', :size => "50x50")
             -else
               = image_tag(item.thumbnail, :class => 'img-rounded', :size => "50x50")
-          %td{align: "center"}
+          %td{colspan: "2"}
             .lead= item.name
-          %td{align: "center"}
-            .lead= item.price.to_s + ' credits'
-          %td{align: "center"}
+        %tr
+          %td
             -if current_user.credits < item.price
               = link_to 'Buy', '#', class: "btn", disabled: true
             -else
-              = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn", remote: true
+              = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn btn-small", remote: true
             %div{id: "itemCount-#{item.id}"}
               .badge.badge-inverse= Purchase.where(item_id: item.id).count
-        %tr
-          %td{colspan: "2", align: "center"}
-            .muted= item.description
-          %td{align: "center"}
-            =link_to ' Edit', edit_item_path(item), class: "i icon-edit btn btn-small"
-            =link_to ' Delete', item, confirm: 'Are you sure?', class: "i icon-trash btn btn-small", method: :delete, remote: true
-
-    %dev.visible-phone.visible-tablet{align: "center"}
-      .span2
-        %table{width: "100%"}
-          %tr
-            %td
-              -if item.thumbnail == ""
-                = image_tag('product.png', :class => 'img-rounded', :size => "50x50")
-              -else
-                = image_tag(item.thumbnail, :class => 'img-rounded', :size => "50x50")
-            %td{colspan: "2"}
-              .lead= item.name
-          %tr
-            %td
-              -if current_user.credits < item.price
-                = link_to 'Buy', '#', class: "btn", disabled: true
-              -else
-                = link_to 'Buy', buy_item_path(item: item.id, user: current_user.id), class: "btn btn-small", remote: true
-              %div{id: "itemCount-#{item.id}"}
-                .badge.badge-inverse= Purchase.where(item_id: item.id).count
-            %td
-              .lead= item.price.to_s + ' credits'
-      -if current_user.user_type >= 10
-        .span.edit-content
-          =link_to ' Edit', edit_item_path(item), class: "i icon-edit btn btn-small"
-          =link_to ' Delete', item, confirm: 'Are you sure?', class: "i icon-trash btn btn-small", method: :delete, remote: true
+          %td
+            .lead= item.price.to_s + ' credits'
+    -if current_user.user_type >= 10
+      .span.edit-content
+        =link_to ' Edit', edit_item_path(item), class: "i icon-edit btn btn-small"
+        =link_to ' Delete', item, confirm: 'Are you sure?', class: "i icon-trash btn btn-small", method: :delete, remote: true
