--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -1,24 +1,25 @@
 .span8{align: "center"}
-  .row
-    .span5
-      %h2.lead Store
-    .span2.well.well-small{id: "credits"}
-      .lead
-        = current_user.credits
-        credits
-    -if current_user.user_type >= 20
-      .row.span7{align: "right"}
-        = link_to " Item", new_item_path, class: "i icon-plus btn btn-small btn-comment"
-  .row
-    .span10
-      %ul.nav.nav-tabs
-        %li.active
-          %a{:href => "#"} Items
-        %li
-          = link_to 'Purchases', purchases_path
-.row
-  .span10
-    %h4 Items
+  %h2.lead Store
+  %ul.nav.nav-tabs
+    %li.active
+      %a{:href => "#"} Items
+    %li
+      = link_to 'Purchases', purchases_path
+  -@items.sort_by{ |t| t.price }.each do |item|
+    =render partial: 'item', locals: { item: item }
+.span2{align: "center"}
+  %p
+  -if current_user.user_type >= 20
+    = link_to " Item", new_item_path, class: "i icon-plus btn"
     %p
-      -@items.sort_by{ |t| t.price }.each do |item|
-        =render partial: 'item', locals: { item: item }
+  .lead Credits
+  %div.well.well-small
+    -if current_user.user_type < 10
+      .lead
+        =current_user.credits
+    -else
+      %table{width: "100%"}
+        -children.each do |member|
+          %tr
+            %td=member.name
+            %td=member.credits
