--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -4,13 +4,13 @@
       -if params[:controller] == 'users' || params[:controller] == 'tasks'
         %li.active
           %a{href: "#{user_path(current_user)}"}
-            %i.icon-user
-            Profile
+            %i.icon-tasks
+            Chores
       -else
         %li
           %a{href: "#{user_path(current_user)}"}
-            %i.icon-user
-            Profile
+            %i.icon-tasks
+            Chores
       -if current_user.family
         -if current_user.parent
           -if params[:controller] == 'families'
@@ -59,11 +59,11 @@
       -if params[:controller] == 'users' || params[:controller] == 'tasks'
         %li.active
           %a{href: "#{user_path(current_user)}"}
-            %i.icon-user
+            %i.icon-tasks
       -else
         %li
           %a{href: "#{user_path(current_user)}"}
-            %i.icon-user
+            %i.icon-tasks
       -if current_user.family
         -if current_user.parent
           -if params[:controller] == 'families'
