--- a/app/views/completions/complete_task.js.erb
+++ b/app/views/completions/complete_task.js.erb
@@ -1,1 +1,1 @@
-$("#task-<%= @completion.task_id %>").html('<a href="#" class="i icon-ok btn btn-block btn-success"></a>');
+$("#task-<%= @completion.task_id %>").html('<a href="#" class="i icon-ok btn btn-success"></a>');
