--- a/app/views/events/index.html.haml
+++ b/app/views/events/index.html.haml
@@ -4,9 +4,21 @@
     $(e).toggle();
   }
 
+  function addEvent(day) {
+    hostAddress= top.location.host.toString();
+    url = "http://" + hostAddress + "/events/new?start_time=" + day.dataset.date;
+    window.location = url;
+  }
+
+  function showEvent(e) {
+    event.stopPropagation();
+    url = "/events/" + e;
+    window.location = url;
+  }
+
 .span8
   = calendar @events.sort_by{ |t| t.start_time }, {prev_text: "< ", next_text: " >"} do |event|
-    %div{name: "#{event.user_id}", onclick: "location.href='#{event_path(event)}'", class: "label label-#{(if event.user_id == family[0].id then "success" elsif event.user_id == family[1].id then "warning" elsif event.user_id == family[2].id then "important" elsif event.user_id == family[3].id then "info" elsif event.user_id == family[4].id then "inverse" else "" end)}", style: "cursor: pointer"}
+    %div{name: "#{event.user_id}", onclick: "showEvent(#{event.id});", class: "label label-#{(if event.user_id == family[0].id then "success" elsif event.user_id == family[1].id then "warning" elsif event.user_id == family[2].id then "important" elsif event.user_id == family[3].id then "info" elsif event.user_id == family[4].id then "inverse" else "" end)}", style: "cursor: pointer"}
       = event.start_time.strftime("%l:%M %p")
       %br
       = event.name
@@ -24,3 +36,6 @@
         %input{type: "checkbox", checked: "", onclick: "toggle_visibility(#{member.id});"}
         = member.name
       %p
+
+:javascript
+  $("td").attr("onclick", "addEvent(this);");
