--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -1,7 +1,13 @@
 :javascript
   $(document).ready(function(){
-    $("#start_time").datepicker({ dateFormat: 'yy-mm-dd' });
+    $('#datepicker').datepicker();
   });
+
+  function mealSelected(){
+    if ($('#meal').is(':checked')) {
+      alert("meal");
+    };
+  };
 
 = form_for(@event) do |f|
   - if @event.errors.any?
@@ -12,7 +18,13 @@
         %ul
           - @event.errors.full_messages.each do |msg|
             %li= msg
-  %dl{class: "dl-horizontal"}
+  %dl.dl-horizontal
+    %dt
+      .field
+      %h5 Type
+    %dd
+      = check_box_tag 'event_type', id: 'meal', onclick: "mealSelected();"
+      Meal
     %dt
       .field
       %h5 Name
@@ -20,18 +32,19 @@
       = f.text_field :name
     %dt
       .field
-        %h5 Description
+      %h5 Description
     %dd
       = f.text_area :description, rows: "3", maxlength: "255"
     %dt
       .field
-        %h5 For
+      %h5 For
     %dd
       = f.collection_select :user_id, (current_user.user_type >= 10 ? @users : [current_user]), :id, :name, selected: params[:user_id]
     %dt
       .field
-        %h5 When
+      %h5 When
     %dd
+      %input.date#datepicker{:type => "text", :name => "datepicker", :class => 'date'}
       = f.text_field :start_time
     .actions{align: "right"}
       = f.submit "Save", class: "btn btn-small btn-success"
