--- a/app/views/meals/_form.html.haml
+++ b/app/views/meals/_form.html.haml
@@ -9,7 +9,9 @@
           %li= msg
   .field
     = f.label :name
-    %br
     = f.text_field :name
-  .actions
-    = f.submit
+  .field
+    = f.label 'Info'
+    = f.text_area :description, rows: "3", maxlength: "255"
+  .actions{align: "right"}
+    = f.submit "Save", class: "btn btn-small btn-success"
