--- a/app/views/events/_form.html.haml
+++ b/app/views/events/_form.html.haml
@@ -8,7 +8,7 @@
       alert("meal");
     };
   };
-
+-binding.pry
 = form_for(@event) do |f|
   - if @event.errors.any?
     .text-error
@@ -45,8 +45,8 @@
       %h5 When
     %dd
       #datepicker.date{"data-date" => "dateValue: Event.Date", "data-date-format" => "yyyy/mm/dd"}
-        %input{name: 'start_time', :type => "text", value: (params['start_time'])}/
         %span.add-on
           %i.icon-calendar
+        %input{name: 'start_time', :type => "text", value: (@event ? @event.start_time : params['start_time'])}/
     .actions{align: "right"}
       = f.submit "Save", class: "btn btn-small btn-success"
